updated to work with Material for MkDocs v8

--- a/theme/home.html
+++ b/theme/home.html
@@ -158,7 +158,6 @@
     margin-left: 2em;
   }
 
-
   /* https://gist.github.com/jarthod/8719db9fef8deb937f4f */
   .browser-mockup {
     border-top: 1.5em solid rgba(70, 70, 70);
@@ -282,11 +281,12 @@
           </p>
         </h1>
         <p class="tx-hero__tagline first_tagline">
-          epanet-js is a javascript library for engineers, developers and academics to simulate water
-           networks.
-          </p>
-           <p class="tx-hero__tagline">Run and share hydraulic analyses, or create custom frontend and server-side applications using
-           the OWA EPANET engine.
+          epanet-js is a javascript library for engineers, developers and
+          academics to simulate water networks.
+        </p>
+        <p class="tx-hero__tagline">
+          Run and share hydraulic analyses, or create custom frontend and
+          server-side applications using the OWA EPANET engine.
         </p>
         <a
           href="{{ page.next_page.url | url }}"
@@ -307,7 +307,10 @@
       <div class="tx-hero__image">
         <div class="tx-hero__demoscreen">
           <div class="browser-mockup with-url">
-            <img src="/assets/images/example.jpg" alt="Example application of epanet-js"/>
+            <img
+              src="/assets/images/example.jpg"
+              alt="Example application of epanet-js"
+            />
           </div>
         </div>
       </div>
