--- a/theme/main.html
+++ b/theme/main.html
@@ -1,22 +1,157 @@
-{% extends "base.html" %}
-{% block extrahead %}
-  {% set title = config.site_name %}
-  {% if page and page.title and not page.is_homepage %}
-    {% set title = config.site_name ~ " - " ~ page.title | striptags %}
-  {% endif %}
-  {% set image = config.site_url ~ 'assets/banner.png' %}
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="{{ title }}">
-  <meta property="og:description" content="{{ config.site_description }}">
-  <meta property="og:url" content="{{ page.canonical_url }}">
-  <meta property="og:image" content="{{ image }}">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@lukepbutler_">
-  <meta name="twitter:creator" content="@lukepbutler_">
-  <meta name="twitter:title" content="{{ title }}">
-  <meta name="twitter:description" content="{{ config.site_description }}">
-  <meta name="twitter:image" content="{{ image }}">
+{% extends "base.html" %} {% block extrahead %} {% set title = config.site_name
+%} {% if page and page.title and not page.is_homepage %} {% set title =
+config.site_name ~ " - " ~ page.title | striptags %} {% endif %} {% set image =
+config.site_url ~ 'assets/banner.png' %}
+<meta property="og:type" content="website" />
+<meta property="og:title" content="{{ title }}" />
+<meta property="og:description" content="{{ config.site_description }}" />
+<meta property="og:url" content="{{ page.canonical_url }}" />
+<meta property="og:image" content="{{ image }}" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@lukepbutler_" />
+<meta name="twitter:creator" content="@lukepbutler_" />
+<meta name="twitter:title" content="{{ title }}" />
+<meta name="twitter:description" content="{{ config.site_description }}" />
+<meta name="twitter:image" content="{{ image }}" />
+{% endblock %} {% block header %}
+<!--Before -->
+<style>
+  [dir="ltr"] .md-header__title {
+    margin-left: 0;
+  }
+  .md-ellipsis {
+    font-weight: 400;
+  }
+  .gradient-container {
+    height: 49px;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+    position: fixed;
+    overflow: hidden;
+  }
+
+  .gradient-container-offset {
+    display: none;
+  }
+
+  .gradients {
+    top: 0;
+    grid: repeat(5, 200px) / repeat(10, 1fr);
+    -webkit-transform-origin: 0;
+    transform-origin: 0;
+    background: linear-gradient(
+      #2d517a,
+      #497094 10%,
+      #b1bfcc 38%,
+      #b8c4cf 48%,
+      #f6f9fc 62%
+    );
+  }
+
+  .gradients::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100vw;
+    height: 100%;
+  }
+
+  .gradients {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    display: grid;
+    -webkit-transform: skewY(-12deg);
+    transform: skewY(-12deg);
+  }
+
+  .gradient-container-offset .gradients {
+    top: -48px;
+  }
+
+  .gradients {
+    display: grid;
+    grid: repeat(5, 200px) / repeat(10, 1fr);
+  }
+
+  .gradients :nth-child(1) {
+    grid-area: 3 / 7 / 4/ 1;
+    background: linear-gradient(
+      100grad,
+      rgb(159, 180, 199),
+      rgba(100, 140, 160, 0.09) 20%,
+      rgba(243, 251, 255, 0)
+    );
+  }
+
+  .gradients :nth-child(2) {
+    grid-area: 2 / span 7 /5 / -1;
+    background: linear-gradient(
+      100grad,
+      rgba(0, 119, 204, 0),
+      rgba(0, 119, 204, 0.05) 33%,
+      rgba(73, 79, 84, 0.61)
+    );
+  }
+
+  .gradients :nth-child(3) {
+    grid-area: 4/1/6/8;
+    background: linear-gradient(100grad, #fff 50%, hsla(0, 0%, 100%, 0.05));
+  }
+
+  .gradients :nth-child(4) {
+    grid-area: 4 / span 8 / auto/-1;
+    background: linear-gradient(
+      100grad,
+      rgba(0, 119, 204, 0) 10%,
+      rgb(190, 203, 212)
+    );
+  }
+
+  .gradients :nth-child(5) {
+    grid-area: 3/1/6/5;
+    background: linear-gradient(
+      100grad,
+      rgba(230, 230, 230, 0.25) 7%,
+      rgba(241, 241, 241, 0)
+    );
+  }
+
+  @media screen and (min-width: 76.25em) {
+    .gradient-container-offset {
+      display: initial;
+      position: absolute;
+      z-index: 0;
+      margin-top: 48px;
+    }
+  }
+</style>
+
+<div class="gradient-container">
+  <div class="gradients">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</div>
+{{ super() }}
+<!-- After -->
+<div class="gradient-container gradient-container-offset">
+  <div class="gradients">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+</div>
 {% endblock %}
