--- a/theme/main.html
+++ b/theme/main.html
@@ -16,6 +16,7 @@ config.site_url ~ 'assets/banner.png' %}
 <meta name="twitter:title" content="{{ title }}" />
 <meta name="twitter:description" content="{{ config.site_description }}" />
 <meta name="twitter:image" content="{{ image }}" />
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 {% endblock %} {% block header %}
 <!--Before -->
 <style>
@@ -26,7 +27,7 @@ config.site_url ~ 'assets/banner.png' %}
     font-weight: 400;
   }
   .gradient-container {
-    height: 49px;
+    height: 5em;
     top: 0;
     right: 0;
     left: 0;
